task-4 adding files docker
