# project/app/src/main/kotlin/org/example/app/routes/ApiRoutes.kt
@@ -1,6 +1,8 @@
 package org.example.app.routes
 
 object ApiRoutes {
+    const val HEALTH = "/health"
+
     const val AUTH = "/auth"
     const val REGISTER = "/register"
     const val LOGIN = "/login"
